--- a/.github/test.yml
+++ b/.github/test.yml
@@ -1,20 +1,21 @@
 name: Tests
 
 on:
+  commit:
+    branches: [main]
   pull_request:
   push:
     branches: [main]
 
 jobs:
   test:
-      - name: Install dependencies
-        run: |
-          conda install -c conda-forge joblib scipy pandas pytest-cov pytest-randomly
-          python -m pip install git+https://github.com/networkx/networkx.git@main
-          python -m pip install .
-          echo "Done with installing"
-      - name: PyTest
-        run: |
-          NETWORKX_TEST_BACKEND=j4f \
-          NETWORKX_FALLBACK_TO_NX=True \
-          python -m pytest --pyargs networkx
+    - name: Install dependencies
+      run: |
+        python -m pip install git+https://github.com/networkx/networkx.git@main
+        python -m pip install pytest numpy scipy 
+        python -m pip install .
+    - name: PyTest
+      run: |
+        NETWORKX_TEST_BACKEND=j4f \
+        NETWORKX_FALLBACK_TO_NX=True \
+        python -m pytest --pyargs networkx
